tests/ui/invalid_pyclass_enum.stderr
error: enums can't be inherited by other classes
 --> tests/ui/invalid_pyclass_enum.rs:3:11
  |
3 | #[pyclass(subclass)]
  |           ^^^^^^^^

error: enums can't extend from other classes
  --> tests/ui/invalid_pyclass_enum.rs:10:11
   |
10 | #[pyclass(extends = PyList)]
   |           ^^^^^^^

error: #[pyclass] can't be used on enums without any variants
  --> tests/ui/invalid_pyclass_enum.rs:18:18
   |
18 | enum NoEmptyEnum {}
   |                  ^^

error: Unit variant `UnitVariant` is not yet supported in a complex enum
       = help: change to an empty tuple variant instead: `UnitVariant()`
       = note: the enum is complex because of non-unit variant `StructVariant`
  --> tests/ui/invalid_pyclass_enum.rs:24:5
   |
24 |     UnitVariant,
   |     ^^^^^^^^^^^

error: `constructor` can't be used on a simple enum variant
  --> tests/ui/invalid_pyclass_enum.rs:30:12
   |
30 |     #[pyo3(constructor = (a, b))]
   |            ^^^^^^^^^^^

error: The `eq_int` option requires the `eq` option.
  --> tests/ui/invalid_pyclass_enum.rs:52:11
   |
52 | #[pyclass(eq_int)]
   |           ^^^^^^

error: `eq_int` can only be used on simple enums.
  --> tests/ui/invalid_pyclass_enum.rs:59:11
   |
59 | #[pyclass(eq_int)]
   |           ^^^^^^

error: The `hash` option requires the `frozen` option.
  --> tests/ui/invalid_pyclass_enum.rs:82:11
   |
82 | #[pyclass(hash)]
   |           ^^^^

error: The `hash` option requires the `eq` option.
  --> tests/ui/invalid_pyclass_enum.rs:82:11
   |
82 | #[pyclass(hash)]
   |           ^^^^

error: The `hash` option requires the `eq` option.
  --> tests/ui/invalid_pyclass_enum.rs:91:11
   |
91 | #[pyclass(hash)]
   |           ^^^^

error: The `ord` option requires the `eq` option.
  --> tests/ui/invalid_pyclass_enum.rs:99:11
   |
99 | #[pyclass(ord)]
   |           ^^^

error: #[pyclass] can't be used on enums without any variants - all variants of enum `AllEnumVariantsDisabled` have been configured out by cfg attributes
   --> tests/ui/invalid_pyclass_enum.rs:119:6
    |
119 | enum AllEnumVariantsDisabled {
    |      ^^^^^^^^^^^^^^^^^^^^^^^

error[E0369]: binary operation `==` cannot be applied to type `&SimpleEqOptRequiresPartialEq`
  --> tests/ui/invalid_pyclass_enum.rs:36:11
   |
36 | #[pyclass(eq, eq_int)]
   |           ^^
   |
note: an implementation of `PartialEq` might be missing for `SimpleEqOptRequiresPartialEq`
  --> tests/ui/invalid_pyclass_enum.rs:39:1
   |
39 | enum SimpleEqOptRequiresPartialEq {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ must implement `PartialEq`
help: consider annotating `SimpleEqOptRequiresPartialEq` with `#[derive(PartialEq)]`
   |
39 + #[derive(PartialEq)]
40 | enum SimpleEqOptRequiresPartialEq {
   |

error[E0369]: binary operation `!=` cannot be applied to type `&SimpleEqOptRequiresPartialEq`
  --> tests/ui/invalid_pyclass_enum.rs:36:11
   |
36 | #[pyclass(eq, eq_int)]
   |           ^^
   |
note: an implementation of `PartialEq` might be missing for `SimpleEqOptRequiresPartialEq`
  --> tests/ui/invalid_pyclass_enum.rs:39:1
   |
39 | enum SimpleEqOptRequiresPartialEq {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ must implement `PartialEq`
help: consider annotating `SimpleEqOptRequiresPartialEq` with `#[derive(PartialEq)]`
   |
39 + #[derive(PartialEq)]
40 | enum SimpleEqOptRequiresPartialEq {
   |

error[E0369]: binary operation `==` cannot be applied to type `&ComplexEqOptRequiresPartialEq`
  --> tests/ui/invalid_pyclass_enum.rs:44:11
   |
44 | #[pyclass(eq)]
   |           ^^
   |
note: an implementation of `PartialEq` might be missing for `ComplexEqOptRequiresPartialEq`
  --> tests/ui/invalid_pyclass_enum.rs:47:1
   |
47 | enum ComplexEqOptRequiresPartialEq {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ must implement `PartialEq`
help: consider annotating `ComplexEqOptRequiresPartialEq` with `#[derive(PartialEq)]`
   |
47 + #[derive(PartialEq)]
48 | enum ComplexEqOptRequiresPartialEq {
   |

error[E0369]: binary operation `!=` cannot be applied to type `&ComplexEqOptRequiresPartialEq`
  --> tests/ui/invalid_pyclass_enum.rs:44:11
   |
44 | #[pyclass(eq)]
   |           ^^
   |
note: an implementation of `PartialEq` might be missing for `ComplexEqOptRequiresPartialEq`
  --> tests/ui/invalid_pyclass_enum.rs:47:1
   |
47 | enum ComplexEqOptRequiresPartialEq {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ must implement `PartialEq`
help: consider annotating `ComplexEqOptRequiresPartialEq` with `#[derive(PartialEq)]`
   |
47 + #[derive(PartialEq)]
48 | enum ComplexEqOptRequiresPartialEq {
   |

error[E0277]: the trait bound `SimpleHashOptRequiresHash: Hash` is not satisfied
  --> tests/ui/invalid_pyclass_enum.rs:66:31
   |
66 | #[pyclass(frozen, eq, eq_int, hash)]
   |                               ^^^^ the trait `Hash` is not implemented for `SimpleHashOptRequiresHash`
   |
help: consider annotating `SimpleHashOptRequiresHash` with `#[derive(Hash)]`
   |
69 + #[derive(Hash)]
70 | enum SimpleHashOptRequiresHash {
   |

error[E0277]: the trait bound `ComplexHashOptRequiresHash: Hash` is not satisfied
  --> tests/ui/invalid_pyclass_enum.rs:74:23
   |
74 | #[pyclass(frozen, eq, hash)]
   |                       ^^^^ the trait `Hash` is not implemented for `ComplexHashOptRequiresHash`
   |
help: consider annotating `ComplexHashOptRequiresHash` with `#[derive(Hash)]`
   |
77 + #[derive(Hash)]
78 | enum ComplexHashOptRequiresHash {
   |

error[E0369]: binary operation `>` cannot be applied to type `&InvalidOrderedComplexEnum2`
   --> tests/ui/invalid_pyclass_enum.rs:106:14
    |
106 | #[pyclass(eq,ord)]
    |              ^^^
    |
note: an implementation of `PartialOrd` might be missing for `InvalidOrderedComplexEnum2`
   --> tests/ui/invalid_pyclass_enum.rs:112:1
    |
112 | enum InvalidOrderedComplexEnum2 {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ must implement `PartialOrd`
help: consider annotating `InvalidOrderedComplexEnum2` with `#[derive(PartialEq, PartialOrd)]`
    |
112 + #[derive(PartialEq, PartialOrd)]
113 | enum InvalidOrderedComplexEnum2 {
    |

error[E0369]: binary operation `<` cannot be applied to type `&InvalidOrderedComplexEnum2`
   --> tests/ui/invalid_pyclass_enum.rs:106:14
    |
106 | #[pyclass(eq,ord)]
    |              ^^^
    |
note: an implementation of `PartialOrd` might be missing for `InvalidOrderedComplexEnum2`
   --> tests/ui/invalid_pyclass_enum.rs:112:1
    |
112 | enum InvalidOrderedComplexEnum2 {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ must implement `PartialOrd`
help: consider annotating `InvalidOrderedComplexEnum2` with `#[derive(PartialEq, PartialOrd)]`
    |
112 + #[derive(PartialEq, PartialOrd)]
113 | enum InvalidOrderedComplexEnum2 {
    |

error[E0369]: binary operation `<=` cannot be applied to type `&InvalidOrderedComplexEnum2`
   --> tests/ui/invalid_pyclass_enum.rs:106:14
    |
106 | #[pyclass(eq,ord)]
    |              ^^^
    |
note: an implementation of `PartialOrd` might be missing for `InvalidOrderedComplexEnum2`
   --> tests/ui/invalid_pyclass_enum.rs:112:1
    |
112 | enum InvalidOrderedComplexEnum2 {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ must implement `PartialOrd`
help: consider annotating `InvalidOrderedComplexEnum2` with `#[derive(PartialEq, PartialOrd)]`
    |
112 + #[derive(PartialEq, PartialOrd)]
113 | enum InvalidOrderedComplexEnum2 {
    |

error[E0369]: binary operation `>=` cannot be applied to type `&InvalidOrderedComplexEnum2`
   --> tests/ui/invalid_pyclass_enum.rs:106:14
    |
106 | #[pyclass(eq,ord)]
    |              ^^^
    |
note: an implementation of `PartialOrd` might be missing for `InvalidOrderedComplexEnum2`
   --> tests/ui/invalid_pyclass_enum.rs:112:1
    |
112 | enum InvalidOrderedComplexEnum2 {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ must implement `PartialOrd`
help: consider annotating `InvalidOrderedComplexEnum2` with `#[derive(PartialEq, PartialOrd)]`
    |
112 + #[derive(PartialEq, PartialOrd)]
113 | enum InvalidOrderedComplexEnum2 {
    |

error: aborting due to 22 previous errors

Some errors have detailed explanations: E0277, E0369.
For more information about an error, try `rustc --explain E0277`.
